<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accelerator">Neural Accelerator</string>
    <string name="accelerator_settings_column_count_default_value">1</string>
    <string name="accelerator_settings_column_count_key">accelerator_column_count</string>
    <string name="accelerator_settings_column_count_summary">Column count</string>
    <string name="accelerator_settings_column_count_title">Column count</string>
    <string name="accelerator_settings_duration_default_value">60000</string>
    <string name="accelerator_settings_duration_key">accelerator_duration</string>
    <string name="accelerator_settings_duration_summary">Duration of the training</string>
    <string name="accelerator_settings_duration_title">Duration</string>
    <string name="base_profile">Base</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_materials">Material</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_reading">Reading</string>
    <string name="bottom_menu_training">Training</string>
    <string name="cup_timer_settings_duration_default_value">300000</string>
    <string name="cup_timer_settings_duration_key">cup_timer_duration</string>
    <string name="cup_timer_settings_type_default_value">1</string>
    <string name="cup_timer_settings_type_key">cup_timer_type</string>
    <string name="cup_timer_settings_type_summary">Type of training</string>
    <string name="cup_timer_settings_type_title">Type</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_help">Help</string>
    <string name="dialog_restart">Restart</string>
    <string name="dialog_settings">Settings</string>
    <string name="green_dot_description_message_1">This exercise greatly contributes to the expansion of the field of vision. \10\10Contemplation of the green point allows you to distinguish the outlines, outlines of words surrounding the green point, phrases, sentences and gradually you can see all the large and large fragments of the text. \10\10Exercise should be performed for 3 months daily without interruption.</string>
    <string name="green_dot_description_message_2">To do the exercises, you need to sit up straight and at all times to relax, have a steady and calm breathing. \10\10The screen should be at a distance - 30-35 cm from the eyes, as in reading the book. \10\10Before performing gymnastics for the eyes: the head is still. Look down, up, left, right, away, near. \10\10You need to focus on the green spot for 10 minutes: (15, 20, 30, 60, not more than 120 minutes). The text during the contemplation of the green dot is not read. ONLY A GREEN POINT. \10\10Reading is always about eye movement.</string>
    <string name="green_dot_description_message_3">When contemplating a green point, you go through several stages. As the concentration increases, it is easier to keep attention on the point. But eventually you can relax and the green dot can begin to swim in different directions: left-right, up-down, approaching you and moving away from you. \10\10It is important that the eyes without any effort stopped on it, and all extraneous thoughts disappeared. Thanks to this vision, the green dot becomes REPORTING, BRIGHT. The clarity of consciousness is reached, which is the main goal of the exercises. \10\10When it starts to work out (it takes 1-2 weeks), the task is to gradually increase the perception. page horizontally. Then you should see 2-3 lines of text below and above the green point - do not read the text, but FEEL its presence.</string>
    <string name="green_dot_description_message_4">When contemplating a green point, you learn not to be distracted by extraneous thoughts, which leads to something that would not catch up, just a few moments, but that\'s enough.</string>
    <string name="green_dot_description_title">Green dot</string>
    <string name="green_dot_description_title_2">Training Mode</string>
    <string name="green_dot_description_title_3">Recommendations</string>
    <string name="green_dot_description_title_4">Purpose</string>
    <string name="green_dot_settings_duration_summary">Duration of the training</string>
    <string name="green_dot_settings_duration_title">Duration</string>
    <string name="line_of_sight_settings_board_size_summary">Board size</string>
    <string name="line_of_sight_settings_board_size_title">Board size</string>
    <string name="line_of_sight_settings_field_type_preference_default_value">0</string>
    <string name="line_of_sight_settings_field_type_preference_key">line_of_sight_field_type</string>
    <string name="line_of_sight_settings_field_type_summary">Field type</string>
    <string name="line_of_sight_settings_field_type_title">Field type</string>
    <string name="line_of_sight_settings_row_count_preference_default_value">5</string>
    <string name="line_of_sight_settings_row_count_preference_key">line_of_sight_row_count</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_settings_notify_key">notifications_notify</string>
    <string name="notifications_settings_notify_time_key">notifications_notify_time</string>
    <string name="notifications_settings_set_time_title">Set time</string>
    <string name="notifications_settings_title">Daily notifications</string>
    <string name="pass_course_next">Next</string>
    <string name="pass_course_rating_genius">Genius</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="reader_guide_dialog_center_description">Click on the central third of the screen to pause or to resume training \10\10Click twice on the central third of the screen to call a navigation menu</string>
    <string name="reader_guide_dialog_fast_reading_message">This mode allows to read books using the automatic page turning with the help of cursor highlighting the text. \10\10You need to try to read with defocused sight. Make it a routine to reach the maximum amount of text. \10\10It is not necessary to fully understand the read text in the early stages.</string>
    <string name="reader_guide_dialog_fast_reading_title">Speed reading</string>
    <string name="reader_guide_dialog_speed_down_description">Click on the left third of the screen to reduce speed</string>
    <string name="reader_guide_dialog_speed_up_description">Click on the right third of the screen to increase speed</string>
    <string name="schulte_table_settings_column_count_preference_default_value">5</string>
    <string name="schulte_table_settings_column_count_preference_key">schulte_table_column_count</string>
    <string name="schulte_table_settings_column_count_summary">Column count</string>
    <string name="schulte_table_settings_column_count_title">Column count</string>
    <string name="schulte_table_settings_fullscreen_preference_key">schulte_table_fullscreen</string>
    <string name="schulte_table_settings_fullscreen_summary">Schulte table fullscreen mode</string>
    <string name="schulte_table_settings_fullscreen_title">Fullscreen</string>
    <string name="schulte_table_settings_row_count_preference_default_value">5</string>
    <string name="schulte_table_settings_row_count_preference_key">schulte_table_row_count</string>
    <string name="schulte_table_settings_row_count_summary">Row count</string>
    <string name="schulte_table_settings_row_count_title">Row count</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_to_friends">Tell friends</string>
    <string name="speed_reading_result_average_speed">Average speed</string>
    <string name="speed_reading_result_best_average_speed">Best</string>
    <string name="speed_reading_result_best_max_speed">Best</string>
    <string name="speed_reading_result_max_speed">Max speed</string>
</resources>