<?xml version="1.0" encoding="utf-8"?>
<android.support.p003v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.p003v7.preference.SwitchPreferenceCompat android:title="@string/schulte_table_settings_fullscreen_title" android:key="@string/schulte_table_settings_fullscreen_preference_key" android:summary="@string/schulte_table_settings_fullscreen_summary" android:defaultValue="false"/>
    <android.support.p003v7.preference.ListPreference android:entries="@array/schulte_table_settings_row_count_entries" android:title="@string/schulte_table_settings_row_count_title" android:key="@string/schulte_table_settings_row_count_preference_key" android:summary="@string/schulte_table_settings_row_count_summary" android:defaultValue="@string/schulte_table_settings_row_count_preference_default_value" android:entryValues="@array/schulte_table_settings_row_count_entries"/>
    <android.support.p003v7.preference.ListPreference android:entries="@array/schulte_table_settings_column_count_entries" android:title="@string/schulte_table_settings_column_count_title" android:key="@string/schulte_table_settings_column_count_preference_key" android:summary="@string/schulte_table_settings_column_count_summary" android:defaultValue="@string/schulte_table_settings_column_count_preference_default_value" android:entryValues="@array/schulte_table_settings_column_count_entries"/>
</android.support.p003v7.preference.PreferenceScreen>
