<?xml version="1.0" encoding="utf-8"?>
<android.support.p003v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.p003v7.preference.ListPreference android:entries="@array/cup_timer_settings_duration_entries" android:title="@string/green_dot_settings_duration_title" android:key="@string/cup_timer_settings_duration_key" android:summary="@string/green_dot_settings_duration_summary" android:defaultValue="@string/cup_timer_settings_duration_default_value" android:entryValues="@array/cup_timer_settings_duration_entry_values"/>
    <android.support.p003v7.preference.ListPreference android:entries="@array/cup_timer_settings_type_entries" android:title="@string/cup_timer_settings_type_title" android:key="@string/cup_timer_settings_type_key" android:summary="@string/cup_timer_settings_type_summary" android:defaultValue="@string/cup_timer_settings_type_default_value" android:entryValues="@array/cup_timer_settings_type_entry_values"/>
</android.support.p003v7.preference.PreferenceScreen>
