<?xml version="1.0" encoding="utf-8"?>
<android.support.p003v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.p003v7.preference.ListPreference android:entries="@array/accelerator_settings_duration_entries" android:title="@string/accelerator_settings_duration_title" android:key="@string/accelerator_settings_duration_key" android:summary="@string/accelerator_settings_duration_summary" android:defaultValue="@string/accelerator_settings_duration_default_value" android:entryValues="@array/accelerator_settings_duration_entry_values"/>
    <android.support.p003v7.preference.ListPreference android:entries="@array/accelerator_settings_column_count_entry_values" android:title="@string/accelerator_settings_column_count_title" android:key="@string/accelerator_settings_column_count_key" android:summary="@string/accelerator_settings_column_count_summary" android:defaultValue="@string/accelerator_settings_column_count_default_value" android:entryValues="@array/accelerator_settings_column_count_entry_values"/>
</android.support.p003v7.preference.PreferenceScreen>
