<?xml version="1.0" encoding="utf-8"?>
<android.support.p003v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.p003v7.preference.ListPreference android:entries="@array/line_of_sight_settings_board_size_entries" android:title="@string/line_of_sight_settings_board_size_title" android:key="@string/line_of_sight_settings_row_count_preference_key" android:summary="@string/line_of_sight_settings_board_size_summary" android:defaultValue="@string/line_of_sight_settings_row_count_preference_default_value" android:entryValues="@array/line_of_sight_settings_board_size_entry_values"/>
    <android.support.p003v7.preference.ListPreference android:entries="@array/line_of_sight_settings_field_type_entries" android:title="@string/line_of_sight_settings_field_type_title" android:key="@string/line_of_sight_settings_field_type_preference_key" android:summary="@string/line_of_sight_settings_field_type_summary" android:defaultValue="@string/line_of_sight_settings_field_type_preference_default_value" android:entryValues="@array/line_of_sight_settings_field_type_entry_values"/>
</android.support.p003v7.preference.PreferenceScreen>
