<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="26sp" android:textColor="@color/colorWhiteText" android:gravity="center" android:paddingTop="8dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/green_dot_description_title"/>
    <TextView android:textSize="16sp" android:textColor="@color/colorWhiteText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/green_dot_description_message_1"/>
    <TextView android:textSize="26sp" android:textColor="@color/colorWhiteText" android:gravity="center" android:paddingTop="8dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/green_dot_description_title_2"/>
    <TextView android:textSize="16sp" android:textColor="@color/colorWhiteText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/green_dot_description_message_2"/>
    <TextView android:textSize="26sp" android:textColor="@color/colorWhiteText" android:gravity="center" android:paddingTop="8dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/green_dot_description_title_3"/>
    <TextView android:textSize="16sp" android:textColor="@color/colorWhiteText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/green_dot_description_message_3"/>
    <TextView android:textSize="26sp" android:textColor="@color/colorWhiteText" android:gravity="center" android:paddingTop="8dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/green_dot_description_title_4"/>
    <TextView android:textSize="16sp" android:textColor="@color/colorWhiteText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/green_dot_description_message_4"/>
</LinearLayout>
