<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="16sp" android:textColor="@drawable/training_pause_dialog_text_color_selector" android:gravity="center_horizontal" android:id="@+id/training_pause_dialog_continue_view" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dialog_continue" android:drawableTop="@drawable/training_pause_dialog_continiue_selector"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:textColor="@drawable/training_pause_dialog_text_color_selector" android:gravity="center_horizontal" android:id="@+id/training_pause_dialog_help_view" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/dialog_help" android:drawableTop="@drawable/training_pause_dialog_help_selector" android:layout_weight="1"/>
        <TextView android:textSize="16sp" android:textColor="@drawable/training_pause_dialog_text_color_selector" android:gravity="center_horizontal" android:id="@+id/training_pause_dialog_settings_view" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/dialog_settings" android:drawableTop="@drawable/training_pause_dialog_settings_selector" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:textColor="@drawable/training_pause_dialog_text_color_selector" android:gravity="center_horizontal" android:id="@+id/training_pause_dialog_exit_view" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/dialog_exit" android:drawableTop="@drawable/training_pause_dialog_exit_selector" android:layout_weight="1"/>
        <TextView android:textSize="16sp" android:textColor="@drawable/training_pause_dialog_text_color_selector" android:gravity="center_horizontal" android:id="@+id/training_pause_dialog_restart_view" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/dialog_restart" android:drawableTop="@drawable/training_pause_dialog_restart_selector" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
