<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="26sp" android:textStyle="bold" android:textColor="@color/colorDarkText" android:id="@+id/profile_rating_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14dp" android:text="@string/pass_course_rating_genius" xmlns:ns1="http://schemas.android.com/apk/res-auto" ns1:layout_constraintEnd_toEndOf="0" xmlns:ns2="http://schemas.android.com/apk/res-auto" ns2:layout_constraintStart_toStartOf="0" xmlns:ns3="http://schemas.android.com/apk/res-auto" ns3:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:src="@drawable/profile_main_icon" xmlns:ns4="http://schemas.android.com/apk/res-auto" ns4:layout_constraintEnd_toEndOf="0" xmlns:ns5="http://schemas.android.com/apk/res-auto" ns5:layout_constraintStart_toStartOf="0" xmlns:ns6="http://schemas.android.com/apk/res-auto" ns6:layout_constraintTop_toBottomOf="@+id/profile_rating_tv"/>
    <TextView android:textColor="@color/colorWhiteText" android:id="@+id/profile_type_tv" android:background="@drawable/rounded_button_shape" android:paddingLeft="24dp" android:paddingTop="8dp" android:paddingRight="24dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/base_profile" xmlns:ns7="http://schemas.android.com/apk/res-auto" ns7:layout_constraintBottom_toBottomOf="@+id/imageView2" xmlns:ns8="http://schemas.android.com/apk/res-auto" ns8:layout_constraintEnd_toEndOf="0" xmlns:ns9="http://schemas.android.com/apk/res-auto" ns9:layout_constraintHorizontal_bias="0.5" xmlns:ns10="http://schemas.android.com/apk/res-auto" ns10:layout_constraintStart_toStartOf="0" xmlns:ns11="http://schemas.android.com/apk/res-auto" ns11:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" xmlns:ns12="http://schemas.android.com/apk/res-auto" ns12:layout_constraintEnd_toEndOf="0" xmlns:ns13="http://schemas.android.com/apk/res-auto" ns13:layout_constraintHorizontal_bias="0" xmlns:ns14="http://schemas.android.com/apk/res-auto" ns14:layout_constraintStart_toStartOf="0" xmlns:ns15="http://schemas.android.com/apk/res-auto" ns15:layout_constraintTop_toBottomOf="@+id/profile_type_tv">
        <LinearLayout android:orientation="vertical" android:id="@+id/profile_settings_view" android:background="@drawable/main_card_selector" android:layout_width="0dp" android:layout_height="150dp" android:layout_marginLeft="12dp" android:layout_marginTop="12dp" android:layout_marginRight="12dp" android:layout_weight="1">
            <TextView android:textStyle="bold" android:textColor="@color/colorWhiteText" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="6dp" android:layout_marginRight="4dp" android:text="@string/notifications"/>
            <ImageView android:layout_gravity="center" android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/ic_settings" android:layout_weight="1"/>
            <TextView android:textColor="@color/colorWhiteText" android:gravity="center" android:background="@drawable/button_shape" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/profile_share_view" android:background="@drawable/main_card_selector" android:layout_width="0dp" android:layout_height="150dp" android:layout_marginTop="12dp" android:layout_marginRight="12dp" android:layout_weight="1">
            <TextView android:textStyle="bold" android:textColor="@color/colorWhiteText" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="6dp" android:layout_marginRight="4dp" android:text="@string/share_to_friends"/>
            <ImageView android:layout_gravity="center" android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/profile_share_icon" android:layout_weight="1"/>
            <TextView android:textColor="@color/colorWhiteText" android:gravity="center" android:background="@drawable/button_shape" android:paddingTop="4dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/share"/>
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="10sp" android:textStyle="italic" android:textColor="@color/colorMain" android:id="@+id/privacy_policy_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginBottom="12dp" android:text="@string/privacy_policy" xmlns:ns16="http://schemas.android.com/apk/res-auto" ns16:layout_constraintBottom_toBottomOf="0" xmlns:ns17="http://schemas.android.com/apk/res-auto" ns17:layout_constraintStart_toStartOf="0"/>
</android.support.constraint.ConstraintLayout>
